--- a/tethysapp-stevenevansmapapp/tethysapp/stevenevansmapapp/templates/stevenevansmapapp/base.html
+++ b/tethysapp-stevenevansmapapp/tethysapp/stevenevansmapapp/templates/stevenevansmapapp/base.html
@@ -16,6 +16,7 @@
   <li class="title">App Navigation</li>
   <li class="active"><a href="/apps/stevenevansmapapp">Home</a></li>
   <li><a href="/apps/stevenevansmapapp/map-view">Map View</a></li>
+  <li><a href="/apps/stevenevansmapapp/costpath">Least Cost Path</a></li>
   <li><a href="/apps/stevenevansmapapp/data-services">Data Services</a></li>
   <li><a href="/apps/stevenevansmapapp/about">About</a></li>
   <li><a href="/apps/stevenevansmapapp/proposal">Proposal</a></li>
