--- a/tethysapp-stevenevansmapapp/tethysapp/stevenevansmapapp/templates/stevenevansmapapp/base.html
+++ b/tethysapp-stevenevansmapapp/tethysapp/stevenevansmapapp/templates/stevenevansmapapp/base.html
@@ -32,9 +32,11 @@
 {% block content_dependent_styles %}
   {{ block.super }}
   <link href="{% static 'stevenevansmapapp/css/main.css' %}" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://js.arcgis.com/4.6/esri/css/main.css">
 {% endblock %}
 
 {% block scripts %}
   {{ block.super }}
   <script src="{% static 'stevenevansmapapp/js/main.js' %}" type="text/javascript"></script>
+  <script src="https://js.arcgis.com/4.6/"></script>
 {% endblock %}
