--- a/tethysapp-stevenevansmapapp/tethysapp/stevenevansmapapp/templates/stevenevansmapapp/costpath.html
+++ b/tethysapp-stevenevansmapapp/tethysapp/stevenevansmapapp/templates/stevenevansmapapp/costpath.html
@@ -1,6 +1,8 @@
 {% extends "stevenevansmapapp/base.html" %}
 {% load tethys_gizmos %}
 
+{% load staticfiles %}
+
 {% block header_buttons %}
   <div class="header-button glyphicon-button" data-toggle="tooltip" data-placement="bottom" title="Help">
     <a data-toggle="modal" data-target="#help-modal"><span class="glyphicon glyphicon-question-sign"></span></a>
@@ -8,403 +10,31 @@
 {% endblock %}
 
 {% block app_content %}
-  <!DOCTYPE html>
-<html>
-<head>
-<style>
-tr.row1{background-color: dodgerblue;}
-</style>
- <meta charset="utf-8">
-<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
-
-<link rel="stylesheet" href="https://js.arcgis.com/4.6/esri/css/main.css">
-<script src="https://js.arcgis.com/4.6/"></script>
-
-<title style= "color: dodgerblue;">Bike Route Tool</title>
-
-<style>
-  html, body, #viewDiv {
-    padding: 0;
-    margin: 0;
-    height: 100%;
-    width: 100%;
-  }
-  #topbar {
-      background: #fff;
-      position: absolute;
-      top: 15px;
-      right: 15px;
-      padding: 10px;
-    }
-
-    .action-button {
-      font-size: 16px;
-      background-color: transparent;
-      border: 1px solid #D3D3D3;
-      color: #6e6e6e;
-      height: 32px;
-      width: 32px;
-      text-align: center;
-      box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
-    }
-
-    .action-button:hover,
-    .action-button:focus {
-      background: #0079c1;
-      color: #e4e4e4;
-    }
-
-    .active {
-      background: #0079c1;
-      color: #e4e4e4;
-    }
-</style>
-<link rel="stylesheet" href="https://js.arcgis.com/4.6/esri/css/main.css">
-<script src="https://js.arcgis.com/4.6/"></script>
-<script>
-require([
-    "esri/Map",
-    "esri/widgets/Sketch/SketchViewModel",
-    "esri/layers/GraphicsLayer",
-    "esri/Graphic",
-    "esri/geometry/Point",
-    "esri/tasks/Geoprocessor",
-    "esri/tasks/support/LinearUnit",
-    "esri/tasks/support/FeatureSet",
-    "esri/views/MapView",
-    "esri/layers/MapImageLayer",
-    "esri/layers/FeatureLayer",
-    "dojo/dom",  // require dojo/dom for getting the DOM element
-    "dojo/on",   // require dojo/on for listening to events on the DOM
-    "dojo/domReady!"
-], function(Map, GraphicsLayer, Graphic, SketchViewModel, Point, Geoprocessor, LinearUnit, FeatureSet, MapView, MapImageLayer, FeatureLayer, dom, on){
-
-	var map = new Map({
-	  basemap: "satellite"
-
-	});
-	//a graphics layer to show input point and output polygon
-    var graphicsLayer = new GraphicsLayer();
-    map.add(graphicsLayer);
-
-    var template = {
-
-        title: "{gnis_name}",
-        content: "This {ftype_text} has an area of {areasqkm} square kilometers.",
-        fieldInfos:[{
-        fieldName:"areasqkm",
-        format: {
-            digitSeparator: true, // Use a comma separator for large numbers
-            places: 0 // Sets the number of decimal places to 0 and rounds up
-        }
-        }]
-    }
-	var utah_dem_Lyr = new MapImageLayer({
-		url: "http://geoserver2.byu.edu/arcgis/rest/services/StorminMormons/DEM/MapServer",
-		id: "utahdem"
-	});
-
-	var waterLyr = new FeatureLayer({
-		url: "http://geoserver2.byu.edu/arcgis/rest/services/StorminMormons/Lakes/FeatureServer/0",
-		id: "snotel",
-        outFields: ["*"],
- 		popupTemplate: template
-	});
-
-	map.layers.add(utah_dem_Lyr);
-	map.layers.add(waterLyr);
-
-	var view = new MapView({
-	  container: "viewDiv",
-	  map: map,
-	  zoom: 10,  // Sets zoom level based on level of detail (LOD)
-	  center: [-111.7, 40.2]  // Sets center point of view using longitude,latitude
-	});
-
-    //start of new stuff
-    // symbol for input point
-	var markerSymbol = {
-          type: "simple-marker", // autocasts as new SimpleMarkerSymbol()
-          color: [255, 0, 0],
-          outline: { // autocasts as new SimpleLineSymbol()
-            color: [255, 255, 255],
-            width: 2
-          }
-        };
-
-	// symbol for watershed polygon
-    var fillSymbol = {
-          type: "simple-fill", // autocasts as new SimpleFillSymbol()
-          color: [226, 119, 40, 0.75],
-          outline: { // autocasts as new SimpleLineSymbol()
-            color: [255, 255, 255],
-            width: 1
-          }
-        };
-
-	// Geoprocessing service url
-	var gpUrl = "http://geoserver2.byu.edu/arcgis/rest/services/StorminMormons/StormMorm_CreateWatershedPolygon/GPServer/Create%20Watershed%20Polygon";
-
-    // create a new Geoprocessor
-	var gp = new Geoprocessor(gpUrl);
-	// define output spatial reference
-    gp.outSpatialReference = { // autocasts as new SpatialReference()
-          wkid: 102100 //EPSG3857
-        };
-	//add map click function
-
-
-
-    //start new crap
-    /*
-    view.when(function() {
-        // create a new sketch view model
-        var sketchViewModel = new SketchViewModel({
-          view: view,
-          layer: GraphicsLayer,
-          pointSymbol: { // symbol used for points
-            type: "simple-marker", // autocasts as new SimpleMarkerSymbol()
-            style: "square",
-            color: "#8A2BE2",
-            size: "16px",
-            outline: { // autocasts as new SimpleLineSymbol()
-              color: [255, 255, 255],
-              width: 3 // points
-            }
-          }
-        });
-
-        // ************************************************************
-        // Get the completed graphic from the event and add it to view.
-        // This event fires when user presses
-        //  * "C" key to finish sketching point, polygon or polyline.
-        //  * Double-clicks to finish sketching polyline or polygon.
-        //  * Clicks to finish sketching a point geometry.
-        // ***********************************************************
-        sketchViewModel.on("draw-complete", function(evt) {
-          // if multipoint geometry is created, then change the symbol
-          // for the graphic
-          if (evt.geometry.type === "multipoint") {
-            evt.graphic.symbol = {
-              type: "simple-marker",
-              style: "square",
-              color: "green",
-              size: "16px",
-              outline: {
-                color: [255, 255, 255],
-                width: 3
-              }
-            };
-          }
-          // add the graphic to the graphics layer
-          GraphicsLayer.add(evt.graphic);
-          setActiveButton();
-        });
-
-        // ******************************************
-        // activate the sketch to create a multipoint
-        // ******************************************
-        var drawMultipointButton = document.getElementById(
-          "multipointButton");
-        drawMultipointButton.onclick = function() {
-          // set the sketch to create a multipoint geometry
-          sketchViewModel.create("multipoint");
-          setActiveButton(this);
-        };
-
-
-
-        // **************
-        // reset button
-        // **************
-        document.getElementById("resetBtn").onclick = function() {
-          GraphicsLayer.removeAll();
-          sketchViewModel.reset();
-          setActiveButton();
-        };
-
-        function setActiveButton(selectedButton) {
-          // focus the view to activate keyboard shortcuts for sketching
-          view.focus();
-          var elements = document.getElementsByClassName("active");
-          for (var i = 0; i < elements.length; i++) {
-            elements[i].classList.remove("active");
-          }
-          if (selectedButton) {
-            selectedButton.classList.add("active");
-          }
-        }
-      });
-    });
-    //end new crap*/
-
-	//main function
-    function bufferPoint(event) {
-
-          graphicsLayer.removeAll();
-          var point = new Point({
-            longitude: event.mapPoint.longitude,
-            latitude: event.mapPoint.latitude
-          });
-          var inputGraphic = new Graphic({
-            geometry: point,
-            symbol: markerSymbol
-          });
-          graphicsLayer.add(inputGraphic);
-          var inputGraphicContainer = [];
-          inputGraphicContainer.push(inputGraphic);
-          var featureSet = new FeatureSet();
-          featureSet.features = inputGraphicContainer;
-          //var bfDistance = new LinearUnit();
-          //bfDistance.distance = 100;
-          //bfDistance.units = "miles";
-
-		  // input parameters
-          var params = {
-            "Pour_Point": featureSet,
-            //"Point": featureSet,
-            //"Distance": bfDistance
-          };
-          gp.submitJob(params).then(completeCallback, errBack, statusCallback);
-    }
-
-	function completeCallback(result){
-
-        gp.getResultData(result.jobId, "Output_Watershed").then(drawResult, drawResultErrBack);
-        gp.getResultData(result.jobId, "Output_snapped_pour_point").then(drawResult1, drawResult1ErrBack);
-	}
-
-	function drawResult(data){
-	    graphicsLayer.removeAll();
-	    var polygon_feature = data.value.features[0];
-		polygon_feature.symbol = fillSymbol;
-		graphicsLayer.add(polygon_feature);
-	}
-
-	function drawResultErrBack(err) {
-        console.log("draw result error: ", err);
-    }
-	function drawResult1(data){
-	    var point_feature = data.value.features[0];
-		point_feature.symbol = markerSymbol;
-		graphicsLayer.add(point_feature);
-	}
-
-	function drawResult1ErrBack(err) {
-        console.log("draw result error: ", err);
-    }
-
-	function statusCallback(data) {
-        console.log(data.jobStatus);
-    }
-    function errBack(err) {
-        console.log("gp error: ", err);
-    }
-
-    //end of new stuff
-
-
-	// Create a variable referencing the checkbox node
-    var demLyrToggle = dom.byId("dem");
-
-    // Listen to the onchange event for the checkbox
-    on(demLyrToggle, "change", function(){
-      // When the checkbox is checked (true), set the layer's visibility to true
-      utah_dem_Lyr.visible = demLyrToggle.checked;
-    });
-	var snotelLyrToggle = dom.byId("snoLyr");
-
-    // Listen to the onchange event for the checkbox
-    on(snotelLyrToggle, "change", function(){
-      // When the checkbox is checked (true), set the layer's visibility to true
-      waterLyr.visible = snotelLyrToggle.checked;
-    });
-
-   });
-
-</script>
-
-</head>
-<body>
-
-<h1>
-Bicycle Path Planning Tool
-</h1>
-
-
-<span id="layerToggle">
-    <input type="checkbox" id="dem" checked> Utah DEM
-  </span>
-  <br />
-  <span id="layToggle">
-    <input type="checkbox" id="snoLyr" checked> Lakes
-  </span>
-  <!--<span id="layToggle">
-    <input type="checkbox" id="watershed" checked> Watershed Delineation Services
-  </span>-->
-
-<hr>
-<div id="viewDiv" style="width:100%;height:500px">
-      <div id="topbar">
-
-      <button class="action-button esri-icon-handle-horizontal" id="multipointButton" type="button"
-        title="Draw multipoint"></button>
-
-      <button class="action-button esri-icon-trash" id="resetBtn" type="button" title="Clear graphics"></button>
+    <div class="Intro">
+        <h1 id="title" align="center">Trench Offhaul and Import Calculator</h1>
+        <p align="center">This app allows the user to calculate how much soil will be excavated when installing a pipe and how much soil will need
+        to imported for bedding and backfill.</p>
     </div>
-</div>
-<div style="width:100%;height:500px">{% gizmo line_plot_view %}</div>
-
-
-
-
-
-
-
-</body>
-</html>
+    <br>
+    <br>
+    <div id="mapslope">
+        <div id="topbar">
+          <button class="action-button esri-icon-polyline" id="polylineButton" type="button"
+            title="Draw polyline"></button>
+          <button class="action-button esri-icon-trash" id="resetBtn" type="button" title="Clear graphics"></button>
+        </div>
+    </div>
 
 {% endblock %}
 
 {# Use the after_app_content block for modals #}
 {% block after_app_content %}
-  <!-- Example Modal -->
-  <div class="modal fade" id="help-modal" tabindex="-1" role="dialog" aria-labelledby="help-modal-label">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          <h5 class="modal-title" id="help-modal-label">Example Modal</h5>
-        </div>
-        <div class="modal-body">
-          <p>You can add custom buttons to the app header using the <code>header_buttons</code> block. Use anchor/link tags for the button and wrap it in a div with the class <code>header-button</code>. For buttons with the gliphyicons, add the <code>glyphicon-button</code> class as well.</p>
-          <p>Ever have trouble using a modal in a Tethys app? Use the <code>after_app_content</code> block for modal content to allow them to function properly. See: <a href="https://getbootstrap.com/javascript/#modals">Bootstrap Modals</a></p>
-          <p>Add tooltips to any element by adding the <code>data-toggle</code>, <code>data-placement</code>, and <code>title</code> attributes to the button. See: <a href="https://getbootstrap.com/javascript/#tooltips">Bootstrap Tooltips</a></p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
-        </div>
-      </div>
-    </div>
-  </div>
+
 {% endblock %}
 
 {% block app_actions %}
-
 {% endblock %}
 
-{% block app_navigation_items %}
-  <li class="title">App Navigation</li>
-  <li class="active"><a href="/apps/stevenevansmapapp">Home</a></li>
-  <li><a href="/apps/stevenevansmapapp/map-view">Map View</a></li>
-  <li><a href="/apps/stevenevansmapapp/costpath">Least Cost Path</a></li>
-  <li><a href="/apps/stevenevansmapapp/data-services">Data Services</a></li>
-  <li><a href="/apps/stevenevansmapapp/about">About</a></li>
-  <li><a href="/apps/stevenevansmapapp/proposal">Proposal</a></li>
-  <li><a href="/apps/stevenevansmapapp/mockups">Mock Ups</a></li>
-  {% gizmo slider_bar %}
-  {% gizmo button %}
+{% block scripts %}
+  {{ block.super }}
 {% endblock %}
-
-
