Least Cost Path Almost Works

--- a/tethysapp-stevenevansmapapp/tethysapp/stevenevansmapapp/templates/stevenevansmapapp/costpath.html
+++ b/tethysapp-stevenevansmapapp/tethysapp/stevenevansmapapp/templates/stevenevansmapapp/costpath.html
@@ -17,11 +17,18 @@
     </div>
     <br>
     <br>
+    <button onclick ="app.createstartpt(startpt)" id="startptbutton">Click Starting Point</button>
+    <button onclick ="app.createendpt(endpt)" id="endptbutton">Click Ending Point</button>
+    <button onclick ="app.callservice(startpt, endpt)" id="callservicebttn">Calculate Least Cost Path</button>
     <div id="mapslope">
         <div id="topbar">
           <button class="action-button esri-icon-polyline" id="polylineButton" type="button"
             title="Draw polyline"></button>
           <button class="action-button esri-icon-trash" id="resetBtn" type="button" title="Clear graphics"></button>
+          <button class="action-button esri-icon-blank-map-pin" id="startpointButton" type="button"
+        title="Draw point"></button>
+          <button class="action-button esri-icon-blank-map-pin" id="endpointButton" type="button"
+        title="Draw point"></button>
         </div>
     </div>
 
